# mop

./: .env  .env.development  .env.production  CHANGELOG.md  LATEST_CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1736095101731-21cf07d98f95e.mjs
.github/actions/: build.sh
.github/actions/build-for-linux/: action.yml  build.sh  entrypoint.sh
.github/workflows/: release.yml
src/: App.scss  App.tsx  constant.ts  env.d.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/initData/: mop.json  shortcut.json
src-tauri/src/: conf.rs  lib.rs  macros.rs  main.rs  utils.rs
src-tauri/src/api/: album.rs  artist.rs  auth.rs  cloud_engine.rs  crypto.rs  mod.rs  mv.rs  other.rs  playlist.rs  request.rs  track.rs  user.rs
src-tauri/src/app/: cmds.rs  hotkey.rs  menu.rs  mod.rs  mpris.rs
src-tauri/src/engine/: config.rs  executor.rs  ext.rs  interface.rs  json.rs  kugou.rs  mod.rs  models.rs  request.rs  selector.rs  ytdl.rs
src/api/: album.ts  artist.ts  auth.ts  fetch.ts  lastfm.ts  mv.ts  other.ts  playlist.ts  track.ts  user.ts
src/business/: DownloadFileTask.ts  PlayerEventListener.ts  TaryEvent.ts  player.ts
src/components/: ArtistsInLine.tsx  ButtonIcon.tsx  ButtonTwoTone.scss  ButtonTwoTone.tsx  ContextMenu.scss  ContextMenu.tsx  Cover.module.scss  Cover.tsx  CoverRow.module.scss  CoverRow.tsx  DailyTracksCard.module.scss  DailyTracksCard.tsx  ExplicitSymbol.tsx  FMCard.module.scss  FMCard.tsx  Modal.scss  Modal.tsx  ModalAddTrackToPlaylist.module.scss  ModalAddTrackToPlaylist.tsx  ModalNewPlaylist.module.scss  ModalNewPlaylist.tsx  MvRow.scss  MvRow.tsx  MvRowItem.tsx  Navbar.module.scss  Navbar.tsx  PlayControl.tsx  Player.scss  Player.tsx  ScrollTop.tsx  SvgIcon.tsx  Toast.scss  Toast.tsx  TrackList.tsx  TrackListItem.module.scss  TrackListItem.tsx  UpdateModal.tsx  VolumeControl.scss  VolumeControl.tsx  WinTool.module.scss  (+1 more)
src/db/: index.ts
src/event/: messageEventEmitter.ts  playerEventEmitter.ts
src/hooks/: index.tsx  useConfig.tsx  useGetState.tsx
src/i18n/: index.tsx
src/i18n/locales/: en_US.json  zh_CN.json
src/pages/: Album.scss  Album.tsx  Artist.scss  Artist.tsx  ArtistMv.scss  ArtistMv.tsx  DailyTracks.scss  DailyTracks.tsx  Explore.module.scss  Explore.tsx  Home.tsx  LastfmCallback.module.scss  LastfmCallback.tsx  Library.module.scss  Library.tsx  Login.tsx  LoginAccount.module.scss  LoginAccount.tsx  LoginUsername.scss  LoginUsername.tsx  Lyrics.module.scss  Lyrics.tsx  Mv.scss  Mv.tsx  NewAlbum.scss  NewAlbum.tsx  Next.module.scss  Next.tsx  Playlist.tsx  Search.scss  Search.tsx  SearchType.scss  SearchType.tsx  home.module.scss  login.module.scss  playlist.scss
src/pages/Settings/: index.module.scss  index.tsx
src/pages/Settings/components/: LinearProgressWithLabel.tsx  SettingsComponent.scss  SettingsInput.tsx  SettingsSelect.tsx  SettingsSwitch.tsx
src/static/: homeData.ts  playlistData.ts  settingsData.ts
src/store/: coreSlice.ts  store.ts
src/type/: github.ts  player.ts
src/utils/: auth.ts  base64.ts  common.ts  data.ts  env.ts  httpStrategy.ts  index.ts  lyrics.ts  playList.ts  staticData.ts  store.ts
tauri-plugin-crypto/: Cargo.toml  README.md  build.rs  package.json
tauri-plugin-crypto/android/: MEDIA_INTEGRATION.md  build.gradle.kts  local.properties  rust_integration_example.rs  settings.gradle
tauri-plugin-crypto/android/src/androidTest/java/: ExampleInstrumentedTest.kt
tauri-plugin-crypto/android/src/main/: AndroidManifest.xml
tauri-plugin-crypto/android/src/main/java/: Crypto.kt  CryptoPlugin.kt  MediaEventHandler.kt  MopNotificationManager.kt  MopNotificationService.kt  MopPlayerReceiver.kt  Utils.kt
tauri-plugin-crypto/android/src/main/res/drawable/: add.xml  pause.xml  play.xml  play_skip_back.xml  play_skip_forward.xml
tauri-plugin-crypto/android/src/test/java/: ExampleUnitTest.kt
tauri-plugin-crypto/guest-js/: index.ts
tauri-plugin-crypto/ios/: Package.swift  README.md
tauri-plugin-crypto/ios/Sources/: ExamplePlugin.swift
tauri-plugin-crypto/permissions/autogenerated/: reference.md
tauri-plugin-crypto/permissions/autogenerated/commands/: aes_encrypt,rsa_encrypt,hash_encrypt.toml
tauri-plugin-crypto/permissions/schemas/: schema.json
tauri-plugin-crypto/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
updater/: updater.mjs
