[package]
name = "mop"
version = "0.0.1"
description = "mop"
authors = ["fangcongyang"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [ "config-json5" ] }

[dependencies]
tauri = { version = "2.2.0", features = [ "config-json5", "protocol-asset", "image-png", "tray-icon", "devtools" ] }
tauri-plugin-shell = "2.2.0"
tauri-plugin-os = "2.2.0"
tauri-plugin-http = "2.2.0"
tauri-plugin-fs = { version = "2.2.0", features = ["watch"] }
tauri-plugin-dialog = "2.2.0"
tauri-plugin-store = "2.2.0"
tauri-plugin-process = "2.2.0"
tauri-plugin-log = "2.2.0"
tauri-plugin-global-shortcut = "2.2.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
lazy_static = "1.5.0"
lru = "0.12.4"
tokio = {version ="1.42.0",features = ["full"] }
cached = {version ="0.54.0",features = ["proc_macro", "async"] }
once_cell = "1.20.2"
regex = "1.11.1"
rand = "0.8.5"
base64 = "0.22"
hex = "0.4" 
cookie = "0.18"
anyhow = "1.0.95"
log = "0.4.19"
async-trait = "0.1.84"
futures = "0.3.28"
concat-string = "1.0.1"
faster-hex = "0.10.0"
md5 = "0.7.0"
thiserror = "2.0.9"
url = "2.5.4"
derive_builder = "0.20.2"
typed-builder = "0.20.0"
tauri-plugin-crypto = { path = "../tauri-plugin-crypto" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winbase"] }

[target.'cfg(linux)'.dependencies]
souvlaki = { version = "0.7.2", default-features = false, features = ["use_zbus"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
