[package]
name = "mop"
version = "0.1.5"
description = "mop"
authors = ["fangcongyang"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.1.0", features = [ "config-json5" ] }

[dependencies]
tauri = { version = "2.4.0", features = [ "config-json5", "protocol-asset", "image-png", "tray-icon", "devtools" ] }
tauri-plugin-shell = "2.2.0"
tauri-plugin-os = "2.2.1"
tauri-plugin-http = { version = "2.4.2", features = ["stream", "json"] }
tauri-plugin-fs = { version = "2.2.0", features = ["watch"] }
tauri-plugin-dialog = "2.2.0"
tauri-plugin-store = "2.2.0"
tauri-plugin-process = "2"
tauri-plugin-log = "2.3.1"
tauri-plugin-global-shortcut = "2.2.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
lazy_static = "1.5.0"
lru = "0.13.0"
tokio = {version ="1.42.0",features = ["full"] }
cached = {version ="0.55.1",features = ["proc_macro", "async"] }
once_cell = "1.20.2"
regex = "1.11.1"
rand = {version ="0.9.0",features = [] }
base64 = "0.22"
hex = "0.4" 
cookie = "0.18"
anyhow = "1.0.95"
log = "0.4.19"
async-trait = "0.1.84"
futures = "0.3.28"
concat-string = "1.0.1"
faster-hex = "0.10.0"
md5 = "0.7.0"
thiserror = "2.0.9"
url = "2.5.4"
derive_builder = "0.20.2"
typed-builder = "0.21.0"
tauri-plugin-crypto = { path = "../tauri-plugin-crypto" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winbase"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
